adição de imagens

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -90,7 +90,7 @@
         app:layout_constraintVertical_bias="0.61" />
 
     <TextView
-        android:id="@+id/txtNome_itens"
+        android:id="@+id/txtNome_rg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/btnDeslogar"
@@ -108,7 +108,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome_itens"
+        app:layout_constraintTop_toBottomOf="@+id/txtNome_rg"
         app:layout_constraintVertical_bias="0.282" />
 
     <TextView
@@ -130,7 +130,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome_itens"
+        app:layout_constraintTop_toBottomOf="@+id/txtNome_rg"
         app:layout_constraintVertical_bias="0.442" />
 
     <TextView
@@ -152,6 +152,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNome_itens"
+        app:layout_constraintTop_toBottomOf="@+id/txtNome_rg"
         app:layout_constraintVertical_bias="0.702" />
 </androidx.constraintlayout.widget.ConstraintLayout>
