--- a/app/src/main/res/layout/itens_produto.xml
+++ b/app/src/main/res/layout/itens_produto.xml
@@ -7,7 +7,8 @@
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp">
 
-    <LinearLayout
+    <!-- Antes
+        <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -82,5 +83,68 @@
                 android:textSize="26sp" />
         </LinearLayout>
     </LinearLayout>
+    -->
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp">
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@mipmap/ic_launcher"
+            android:id="@+id/imgItens"/>
+
+        <TextView
+            android:id="@+id/txtNome_itens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/imgItens"
+            android:text="@string/txtNome_itens"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/txtSabor_itens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtNome_itens"
+            android:layout_marginLeft="9dp"
+            android:layout_marginTop="1dp"
+            android:layout_toRightOf="@id/imgItens"
+            android:text="@string/txtSabor_itens"
+            android:textColor="#000"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/txtValor_itens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtSabor_itens"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="53dp"
+            android:layout_marginTop="19dp"
+            android:layout_toEndOf="@+id/outro"
+            android:layout_toRightOf="@id/imgItens"
+            android:text="@string/txtValor2_itens"
+            android:textColor="#000"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/outro"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtSabor_itens"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="19dp"
+            android:layout_toRightOf="@id/imgItens"
+            android:text="@string/txtValor_itens"
+            android:textColor="#000"
+            android:textSize="25sp" />
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
