--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -48,7 +48,7 @@
             android:textColor="#000"/>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnADDcar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Adicionar ao Carrinho"/>
