--- a/app/src/main/res/layout/fragment_carrinho.xml
+++ b/app/src/main/res/layout/fragment_carrinho.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".model.fragments.CarrinhoFragment">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="date" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
