limitado certos inputs/setado somente portrait

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -89,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtNomeRg" />
 
-    <EditText
+    <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtCpfRg"
         android:layout_width="145dp"
         android:layout_height="44dp"
@@ -102,9 +102,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toEndOf="@+id/edtNomeRg"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:mask="___.___.___-__"
+        app:maskCharacter="_"
+        app:maskStyle="completable"/>
 
-    <EditText
+    <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtNumeroRg"
         android:layout_width="145dp"
         android:layout_height="48dp"
@@ -117,7 +120,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
         app:layout_constraintStart_toEndOf="@+id/edtEmailRg"
-        app:layout_constraintTop_toBottomOf="@+id/edtCpfRg" />
+        app:layout_constraintTop_toBottomOf="@+id/edtCpfRg"
+        app:mask="(__) _____-____"
+        app:maskCharacter="_"
+        app:maskStyle="completable"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
