--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,36 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".model.RegisterActivity">
+
+    <View
+        android:id="@+id/containerComponents"
+        style="@style/ContainerComponents"
+        android:layout_width="374dp"
+        android:layout_height="502dp"
+        android:background="@drawable/borderradius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.186" />
 
     <EditText
         android:id="@+id/edtBairroRg"
         android:layout_width="240dp"
         android:layout_height="48dp"
-        android:layout_marginTop="24dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/bairro_rg"
         android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroRg" />
+        app:layout_constraintBottom_toBottomOf="@+id/containerComponents"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
+        app:layout_constraintTop_toTopOf="@+id/containerComponents"
+        app:layout_constraintVertical_bias="0.319" />
 
     <EditText
         android:id="@+id/edtRuaRg"
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/rua_rg"
         android:inputType="text"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
         app:layout_constraintTop_toBottomOf="@+id/edtBairroRg" />
 
     <EditText
@@ -41,89 +55,97 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginTop="60dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/senha_rg"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtRuaRg" />
+        app:layout_constraintBottom_toBottomOf="@+id/containerComponents"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
+        app:layout_constraintTop_toBottomOf="@+id/edtRuaRg"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCadastroRg"
-        android:layout_width="157dp"
-        android:layout_height="48dp"
+        style="@style/botoesRosa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/botao_cadastrar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/containerComponents"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
         app:layout_constraintTop_toBottomOf="@+id/edtSenhaRg" />
 
     <EditText
         android:id="@+id/edtNomeRg"
         android:layout_width="175dp"
         android:layout_height="48dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/nome_rg"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
+        app:layout_constraintTop_toTopOf="@+id/containerComponents" />
 
     <EditText
         android:id="@+id/edtEmailRg"
         android:layout_width="172dp"
         android:layout_height="44dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/email_rg"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.167"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
         app:layout_constraintTop_toBottomOf="@+id/edtNomeRg" />
 
     <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtCpfRg"
         android:layout_width="145dp"
         android:layout_height="44dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/cpf_rg"
         android:inputType="number"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.588"
-        app:layout_constraintStart_toEndOf="@+id/edtNomeRg"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
+        app:layout_constraintTop_toTopOf="@+id/containerComponents"
         app:mask="___.___.___-__"
         app:maskCharacter="_"
-        app:maskStyle="completable"/>
+        app:maskStyle="completable" />
 
     <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtNumeroRg"
         android:layout_width="145dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/btn_login"
         android:hint="@string/phoneNumber_rg"
         android:inputType="phone"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
-        app:layout_constraintStart_toEndOf="@+id/edtEmailRg"
+        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintStart_toStartOf="@+id/containerComponents"
         app:layout_constraintTop_toBottomOf="@+id/edtCpfRg"
         app:mask="(__) _____-____"
         app:maskCharacter="_"
-        app:maskStyle="completable"/>
+        app:maskStyle="completable" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
