--- a/app/src/main/res/layout/fragment_carrinho.xml
+++ b/app/src/main/res/layout/fragment_carrinho.xml
@@ -51,30 +51,35 @@
             android:id="@+id/rvCarrinho"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/edtDataEntrega" />
-        <Button
+            android:layout_above="@id/divider" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnFinalizar"
+            style="@style/botoesGradiente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="8dp"
-            android:text="FINALIZAR PEDIDO"
-            android:layout_toRightOf="@id/txtValorTotal"/>
+            android:layout_marginBottom="10dp"
+            android:layout_toRightOf="@id/txtValorTotal"
+            android:text="FINALIZAR PEDIDO" />
 
         <TextView
             android:id="@+id/txtRSFINAL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/edtDataEntrega"
-            android:layout_margin="8dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginBottom="5dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="R$: "
-            android:textSize="20sp"
             android:textColor="#000"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -82,6 +87,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/edtDataEntrega"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
@@ -92,6 +99,7 @@
 
         <com.santalu.maskara.widget.MaskEditText
             android:id="@+id/edtDataEntrega"
+            style="@style/edt_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/btnFinalizar"
@@ -107,7 +115,15 @@
             android:textStyle="bold"
             app:mask="--/--"
             app:maskCharacter="-"
-            app:maskStyle="completable"/>
+            app:maskStyle="completable" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_above="@id/edtDataEntrega"/>
+
     </RelativeLayout>
 
 </FrameLayout>
