--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,48 +10,46 @@
         android:id="@+id/containerCompAlt"
         style="@style/ContainerComponents"
         android:layout_width="374dp"
-        android:layout_height="460dp"
+        android:layout_height="490dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/borderradius_inversa"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.186" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDeslogar"
         style="@style/botoesRosa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="@string/btn_Deslogar"
         app:layout_constraintBottom_toBottomOf="@+id/containerCompAlt"
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.904" />
+        app:layout_constraintStart_toStartOf="@+id/containerCompAlt" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAlterar"
         style="@style/botoesVerde"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="Alterar"
         app:layout_constraintBottom_toBottomOf="@+id/containerCompAlt"
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.91" />
+        app:layout_constraintStart_toStartOf="@+id/containerCompAlt" />
 
     <EditText
         android:id="@+id/edtNome_alt"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/btn_login"
         android:hint="@string/nome_rg"
+        android:maxLength="44"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
@@ -60,22 +57,6 @@
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
         app:layout_constraintTop_toBottomOf="@id/textView2" />
-
-    <!--EditText
-        android:id="@+id/edtEmail_alt"
-        android:layout_width="172dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/btn_login"
-        android:hint="@string/email_rg"
-        android:inputType="textEmailAddress"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textColorHint="@color/cinza"
-        app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
-        app:layout_constraintTop_toBottomOf="@+id/edtNome_alt" /-->
 
     <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtCPF_alt"
@@ -125,6 +106,7 @@
         android:background="@drawable/btn_login"
         android:hint="@string/bairro_rg"
         android:inputType="text"
+        android:maxLength="44"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
@@ -142,12 +124,29 @@
         android:background="@drawable/btn_login"
         android:hint="@string/rua_rg"
         android:inputType="text"
+        android:maxLength="44"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
         app:layout_constraintTop_toBottomOf="@+id/edtBairro_alt" />
+
+    <EditText
+        android:id="@+id/edtComplemento_alt"
+        android:layout_width="240dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/btn_login"
+        android:hint="Complemento"
+        android:inputType="text"
+        android:maxLength="44"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/cinza"
+        app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
+        app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
+        app:layout_constraintTop_toBottomOf="@+id/edtRua_alt" />
 
     <TextView
         android:id="@+id/textView2"
