mais algumas mudançaaaaass

--- a/app/src/main/res/layout/itens_produto.xml
+++ b/app/src/main/res/layout/itens_produto.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:background="@drawable/itens">
 
         <ImageView
             android:layout_width="120dp"
