--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,7 +60,7 @@
         android:background="@drawable/btn_login"
         android:hint="Complemento"
         android:inputType="text"
-        android:maxLength="40"
+        android:maxLength="20"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
@@ -108,12 +108,13 @@
         app:layout_constraintEnd_toEndOf="@+id/containerComponents"
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="@+id/containerComponents"
-        app:layout_constraintTop_toTopOf="@+id/containerComponents" />
+        app:layout_constraintTop_toTopOf="@+id/containerComponents"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/edtEmailRg"
         android:layout_width="172dp"
-        android:layout_height="44dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/btn_login"
         android:hint="@string/email_rg"
@@ -131,7 +132,7 @@
     <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtCpfRg"
         android:layout_width="145dp"
-        android:layout_height="44dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_login"
         android:hint="@string/cpf_rg"
