--- a/app/src/main/res/layout/fragment_carrinho.xml
+++ b/app/src/main/res/layout/fragment_carrinho.xml
@@ -14,14 +14,20 @@
             android:id="@+id/imgBoloTriste"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/bolotriste_png"
-            android:layout_centerInParent="true"/>
+            android:src="@drawable/bolotriste_pixel"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="50dp"/>
         <ImageView
             android:id="@+id/imgBoloFeliz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/bolofeliz_png"
-            android:layout_centerInParent="true"
+            android:src="@drawable/bolofeliz_pixel"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="50dp"
             android:visibility="invisible"/>
         <TextView
             android:id="@+id/txtMsgBoloTriste"
