--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -47,8 +47,9 @@
             android:textSize="25sp"
             android:textColor="#000"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnADDcar"
+            style="@style/botoesRosa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Adicionar ao Carrinho"/>
