--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -56,12 +56,14 @@
         app:layout_constraintEnd_toEndOf="@+id/containerCompAlt"
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="@+id/containerCompAlt"
-        app:layout_constraintTop_toBottomOf="@id/textView2" />
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        android:inputType="text"
+        android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM"/>
 
     <com.santalu.maskara.widget.MaskEditText
         android:id="@+id/edtCPF_alt"
         android:layout_width="145dp"
-        android:layout_height="44dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_login"
@@ -140,7 +142,7 @@
         android:background="@drawable/btn_login"
         android:hint="Complemento"
         android:inputType="text"
-        android:maxLength="44"
+        android:maxLength="20"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/cinza"
