--- a/app/src/main/res/layout/fragment_carrinho.xml
+++ b/app/src/main/res/layout/fragment_carrinho.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.fragments.CarrinhoFragment">
+    tools:context=".viewModel.fragments.CarrinhoFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
