--- a/app/src/main/res/layout/fragment_produtos.xml
+++ b/app/src/main/res/layout/fragment_produtos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.ProdutosFragment">
+    tools:context=".viewModel.fragments.ProdutosFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvProdutos"
